--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>cz.muni.fi.pv168</groupId>
-    <artifactId>pv168_project</artifactId>
+    <artifactId>hotel-app</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
