--- a/pom.xml
+++ b/pom.xml
@@ -26,10 +26,11 @@
             <artifactId>derby</artifactId>
             <version>10.14.1.0</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter</artifactId>
-            <version>RELEASE</version>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.7.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -38,7 +39,5 @@
             <version>3.10.0</version>
             <scope>test</scope>
         </dependency>
-
     </dependencies>
-
 </project>
