Property keys edited

--- a/src/main/resources/cz/muni/fi/pv168/hotel/gui/i18n.properties
+++ b/src/main/resources/cz/muni/fi/pv168/hotel/gui/i18n.properties
@@ -1,9 +1,10 @@
-MainWindow.title=Hotel System
+MainWindow.windowTitle=Hotel System
 MainWindow.roomLabel=Room n.
-ButtonPanel.newReservation=New reservation
-ButtonPanel.cancelReservation=Cancel reservation
-ButtonPanel.checkIn=Check-in
-ButtonPanel.checkOut=Check-out
-ButtonPanel.reservationInfo=Reservation info
-ButtonPanel.roomInfo=Room info
-ButtonPanel.settings=Settings
+ButtonPanel.newReservationButton=New reservation
+ButtonPanel.cancelReservationButton=Cancel reservation
+ButtonPanel.checkInButton=Check-in
+ButtonPanel.checkOutButton=Check-out
+ButtonPanel.reservationInfoButton=Reservation info
+ButtonPanel.roomInfoButton=Room info
+ButtonPanel.settingsButton=Settings
+ErrorDialog.windowTitle=Error
