--- a/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n.properties
+++ b/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n.properties
@@ -1,4 +1,4 @@
-NewReservation.title=New reservation
+NewReservation.windowTitle=New reservation
 NewReservation.confirmButton=Confirm
 NewReservation.cancelButton=Cancel
 NewReservation.nameLabel=Name and surname
@@ -11,11 +11,11 @@ NewReservation.roomNumber=Room number
 NewReservation.nameEmptyError=Name cannot be empty
 NewReservation.phoneEmptyError=Phone cannot be empty
 NewReservation.guestsError=Number of guests has to be a number
-CancelReservation.title=Cancel reservation
+CancelReservation.windowTitle=Cancel reservation
 CancelReservation.reservation=Reservation
 CancelReservation.confirmButton=Confirm
 CancelReservation.cancelButton=Cancel
-ReservationInfo.title=Reservation info
+ReservationInfo.windowTitle=Reservation info
 ReservationInfo.reservationLabel=Reservation
 ReservationInfo.confirmButton=Confirm
 ReservationInfo.cancelButton=Cancel
@@ -26,7 +26,7 @@ ReservationInfo.guestsLabel=Number of guests
 ReservationInfo.fromLabel=From
 ReservationInfo.toLabel=To
 ReservationInfo.roomNumber=Room number
-CheckOut.title=Check-out
+CheckOut.windowTitle=Check-out
 CheckOut.confirmButton=Confirm
 CheckOut.cancelButton=Cancel
 CheckOut.selectionError=No reservation selected
@@ -35,5 +35,5 @@ CheckOut.nightsLabel=Nights spent
 CheckOut.roomCostLabel=Room cost per night
 CheckOut.feesLabel=Local fee per person per night
 CheckOut.totalLabel=Total
-RoomInfo.title=Room info
-Settings.title=Settings
+RoomInfo.windowTitle=Room info
+Settings.windowTitle=Settings
