ReservationInfo error messages added

--- a/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n.properties
+++ b/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n.properties
@@ -26,6 +26,8 @@ ReservationInfo.guestsLabel=Number of guests
 ReservationInfo.fromLabel=From
 ReservationInfo.toLabel=To
 ReservationInfo.roomNumber=Room number
+ReservationInfo.guestsError=Field "Guests" has to be a number
+ReservationInfo.reservationError=No reservation selected
 CheckOut.windowTitle=Check-out
 CheckOut.confirmButton=Confirm
 CheckOut.cancelButton=Cancel
