Early checkout situation implemented

--- a/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n.properties
+++ b/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n.properties
@@ -33,6 +33,7 @@ CheckOut.confirmButton=Confirm
 CheckOut.cancelButton=Cancel
 CheckOut.selectionError=No reservation selected
 CheckOut.clientLabel=Client
+CheckOut.guestsLabel=Guests
 CheckOut.nightsLabel=Nights spent
 CheckOut.roomCostLabel=Room cost per night
 CheckOut.feesLabel=Local fee per person per night
