JDialog dependency fixed, no reservation picked bug in CancelReservation fixed

--- a/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n.properties
+++ b/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n.properties
@@ -15,6 +15,7 @@ CancelReservation.windowTitle=Cancel reservation
 CancelReservation.reservation=Reservation
 CancelReservation.confirmButton=Confirm
 CancelReservation.cancelButton=Cancel
+CancelReservation.reservationError=No reservation selected
 ReservationInfo.windowTitle=Reservation info
 ReservationInfo.reservationLabel=Reservation
 ReservationInfo.confirmButton=Confirm
