Local fee setting implemented

--- a/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n.properties
+++ b/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n.properties
@@ -40,3 +40,8 @@ CheckOut.feesLabel=Local fee per person per night
 CheckOut.totalLabel=Total
 RoomInfo.windowTitle=Room info
 Settings.windowTitle=Settings
+Settings.fileError=Configuration file error
+Settings.numberError=Please enter a valid number
+Settings.feesLabel=Local fees:
+Settings.confirmButton=Confirm
+Settings.cancelButton=Cancel
