Table for picking rooms WIP

--- a/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n.properties
+++ b/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n.properties
@@ -11,6 +11,9 @@ NewReservation.roomNumber=Room number
 NewReservation.nameEmptyError=Name cannot be empty
 NewReservation.phoneEmptyError=Phone cannot be empty
 NewReservation.guestsError=Number of guests has to be a number
+NewReservation.noRoom=No room selected
+NewReservation.roomFull=One of selected rooms is full
+NewReservation.noSpace =Not enough beds in chosen room
 CancelReservation.windowTitle=Cancel reservation
 CancelReservation.reservation=Reservation
 CancelReservation.confirmButton=Confirm
