I18N added for some texts

--- a/src/main/resources/cz/muni/fi/pv168/hotel/rooms/i18n.properties
+++ b/src/main/resources/cz/muni/fi/pv168/hotel/rooms/i18n.properties
@@ -1,3 +1,5 @@
 Room.roomLabel=Room n.
 Room.type=room type
 Room.pricePerNight=price per night
+Room.standardBeds=standard
+Room.kingsizeBeds=kingsize
