--- a/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n.properties
+++ b/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n.properties
@@ -43,6 +43,14 @@ CheckOut.feesLabel=Local fee per person per night
 CheckOut.totalLabel=Total
 RoomInfo.windowTitle=Room info
 Settings.windowTitle=Settings
+CheckIn.resName=Name
+CheckIn.resGuests=Number of guests
+CheckIn.confirm=Confirm
+CheckIn.addConfirm=Confirm
+CheckIn.cancel=Cancel
+CheckIn.addCancel=Cancel
+CheckIn.add=Add
+CheckIn.delete=Delete
 Settings.fileError=Configuration file error
 Settings.numberError=Please enter a valid number
 Settings.feesLabel=Local fees:
