Localization added and button availability adjusted

--- a/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n.properties
+++ b/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n.properties
@@ -43,14 +43,20 @@ CheckOut.feesLabel=Local fee per person per night
 CheckOut.totalLabel=Total
 RoomInfo.windowTitle=Room info
 Settings.windowTitle=Settings
-CheckIn.resName=Name
-CheckIn.resGuests=Number of guests
+CheckIn.windowTitle=Check-in
+CheckIn.reservation=Reservation
+CheckIn.name=Name
+CheckIn.numberOfGuests=Number of guests
+CheckIn.noResSelectedError="No reservation selected
+CheckIn.invalidNumOfGuestsError=Invalid number of guests added
+CheckIn.notAllFieldsFilledError=All fields must be filled
+CheckIn.birthDate=Birthdate
+CheckIn.IDnumber=ID number
 CheckIn.confirm=Confirm
-CheckIn.addConfirm=Confirm
 CheckIn.cancel=Cancel
-CheckIn.addCancel=Cancel
 CheckIn.add=Add
 CheckIn.delete=Delete
+CheckIn.rooms=Rooms
 Settings.fileError=Configuration file error
 Settings.numberError=Please enter a valid number
 Settings.feesLabel=Local fees:
