Guest info implemented

--- a/src/main/resources/cz/muni/fi/pv168/hotel/gui/i18n.properties
+++ b/src/main/resources/cz/muni/fi/pv168/hotel/gui/i18n.properties
@@ -5,6 +5,7 @@ ButtonPanel.cancelReservationButton=Cancel reservation
 ButtonPanel.checkInButton=Check-in
 ButtonPanel.checkOutButton=Check-out
 ButtonPanel.reservationInfoButton=Reservation info
+ButtonPanel.guestsInfoButton=Guests info
 ButtonPanel.roomInfoButton=Room info
 ButtonPanel.settingsButton=Settings
 ErrorDialog.windowTitle=Error
