--- a/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n.properties
+++ b/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n.properties
@@ -48,9 +48,11 @@ RoomInfo.windowTitle=Room info
 Settings.windowTitle=Settings
 Settings.fileError=Configuration file error
 Settings.numberError=Please enter a valid number
-Settings.feesLabel=Local fees:
+Settings.feesLabel=Local fees
 Settings.confirmButton=Confirm
 Settings.cancelButton=Cancel
 ErrorDialog.windowTitle=Error
 RoomPicker.checkColumn=Check
 RoomPicker.descriptionColumn=Room
+GuestsInfo.windowTitle=Guests
+GuestsInfo.reservationLabel=Reservation
