--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,6 @@
         <maven.compiler.source>11</maven.compiler.source>
     </properties>
 
-
     <dependencies>
         <dependency>
             <groupId>com.github.lgooddatepicker</groupId>
@@ -28,8 +27,8 @@
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-api</artifactId>
-            <version>5.7.0</version>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.6.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -44,4 +43,14 @@
             <version>1.7</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.2</version>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
