Check for invalid dates + localization added

--- a/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n.properties
+++ b/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n.properties
@@ -53,6 +53,7 @@ CheckIn.numberOfGuests=Number of guests
 CheckIn.noResSelectedError="No reservation selected
 CheckIn.invalidNumOfGuestsError=Invalid number of guests added
 CheckIn.notAllFieldsFilledError=All fields must be filled
+CheckIn.invalidDateError=Please select a valid date
 CheckIn.birthDate=Birthdate
 CheckIn.IDnumber=ID number
 CheckIn.confirm=Confirm
