Walk-in reservation preparation done

--- a/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n.properties
+++ b/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n.properties
@@ -1,6 +1,7 @@
 NewReservation.windowTitle=New reservation
 NewReservation.confirmButton=Confirm
 NewReservation.cancelButton=Cancel
+NewReservation.checkinButton=To check-in
 NewReservation.nameLabel=Name and surname
 NewReservation.phoneLabel=Phone
 NewReservation.emailLabel=Email
