Validation of entered data added + localized

--- a/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n.properties
+++ b/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n.properties
@@ -33,6 +33,8 @@ ReservationInfo.toLabel=To
 ReservationInfo.roomNumber=Room number
 ReservationInfo.guestsError=Field "Guests" has to be a number
 ReservationInfo.bedError=Not enough beds in the chosen rooms
+ReservationInfo.nameError=Name can consist only of alphabetical characters
+ReservationInfo.emailError=Enter valid or no email
 ReservationInfo.dateError=Departure needs to be after arrival
 ReservationInfo.fieldsError=All required fields need to be filled in
 ReservationInfo.reservationError=No reservation selected
