Validation of entered data added + localized

--- a/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n.properties
+++ b/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n.properties
@@ -33,7 +33,9 @@ ReservationInfo.toLabel=To
 ReservationInfo.roomNumber=Room number
 ReservationInfo.guestsError=Field "Guests" has to be a number
 ReservationInfo.bedError=Not enough beds in the chosen rooms
-ReservationInfo.dateError=Departure needs to be after arrival
+ReservationInfo.nameError=Name can consist only of alphabetical characters
+ReservationInfo.emailError=Enter valid or no email
+ReservationInfo.dateError=Enter valid dates
 ReservationInfo.fieldsError=All required fields need to be filled in
 ReservationInfo.reservationError=No reservation selected
 CheckOut.windowTitle=Check-out
