--- a/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n.properties
+++ b/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n.properties
@@ -74,3 +74,6 @@ RoomPicker.checkColumn=Check
 RoomPicker.descriptionColumn=Room
 GuestsInfo.windowTitle=Guests
 GuestsInfo.reservationLabel=Reservation
+GuestTable.birthDate=Birthdate
+GuestTable.IDnumber=ID number
+GuestTable.name=Name
