--- a/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n.properties
+++ b/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n.properties
@@ -11,6 +11,8 @@ NewReservation.toLabel=To
 NewReservation.roomNumber=Room number
 NewReservation.nameEmptyError=Name cannot be empty
 NewReservation.phoneEmptyError=Phone cannot be empty
+NewReservation.emailFormatError = Email format is not right
+NewReservation.phoneFormatError = Phone number format is not right
 NewReservation.guestsError=Number of guests has to be a number
 NewReservation.noRoom=No room selected
 NewReservation.roomFull=One of selected rooms is full
