Email field validation added

--- a/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n.properties
+++ b/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n.properties
@@ -34,6 +34,7 @@ ReservationInfo.roomNumber=Room number
 ReservationInfo.guestsError=Field "Guests" has to be a number
 ReservationInfo.bedError=Not enough beds in the chosen rooms
 ReservationInfo.nameError=Name can consist only of alphabetical characters
+ReservationInfo.phoneError=Phone is in invalid format
 ReservationInfo.emailError=Enter valid or no email
 ReservationInfo.dateError=Enter valid dates
 ReservationInfo.fieldsError=All required fields need to be filled in
