Error dialog on initialization failure added

--- a/src/main/resources/cz/muni/fi/pv168/hotel/gui/i18n.properties
+++ b/src/main/resources/cz/muni/fi/pv168/hotel/gui/i18n.properties
@@ -1,5 +1,6 @@
-MainWindow.windowTitle=Hotel System
+MainWindow.windowTitle=Hotel Reservation System
 MainWindow.roomLabel=Room n.
+MainWindow.initError=Error initializing the application
 ButtonPanel.newReservationButton=New reservation
 ButtonPanel.cancelReservationButton=Cancel reservation
 ButtonPanel.checkInButton=Check-in
