Swing implemented in CheckIn, room column added to GuestTable

--- a/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n.properties
+++ b/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n.properties
@@ -77,3 +77,4 @@ GuestsInfo.reservationLabel=Reservation
 GuestTable.birthDate=Birthdate
 GuestTable.IDnumber=ID number
 GuestTable.name=Name
+GuestTable.roomNumber=Room number
