--- a/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n.properties
+++ b/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n.properties
@@ -64,6 +64,7 @@ CheckIn.cancel=Cancel
 CheckIn.add=Add
 CheckIn.delete=Delete
 CheckIn.rooms=Rooms
+CheckIn.roomNumber=Room number
 Settings.fileError=Configuration file error
 Settings.numberError=Please enter a valid number
 Settings.feesLabel=Local fees
