Overfilling of a room in CheckIn prevented

--- a/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n.properties
+++ b/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n.properties
@@ -72,6 +72,7 @@ CheckIn.add=Add
 CheckIn.delete=Delete
 CheckIn.rooms=Rooms
 CheckIn.roomNumber=Room number
+CheckIn.overfilledRoomError=Room overfilled
 Settings.fileError=Configuration file error
 Settings.numberError=Please enter a valid number
 Settings.feesLabel=Local fees
