--- a/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n.properties
+++ b/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n.properties
@@ -73,6 +73,9 @@ CheckIn.delete=Delete
 CheckIn.rooms=Rooms
 CheckIn.roomNumber=Room number
 CheckIn.overfilledRoomError=Room overfilled
+CheckIn.unfilledRoom=Unfilled room
+CheckIn.roomNotFilled=Following room is not full
+CheckIn.choosePrice=Please, enter price
 Settings.fileError=Configuration file error
 Settings.numberError=Please enter a valid number
 Settings.feesLabel=Local fees
