PriceWindow in CheckIn now works

--- a/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n.properties
+++ b/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n.properties
@@ -76,6 +76,7 @@ CheckIn.overfilledRoomError=Room overfilled
 CheckIn.unfilledRoom=Unfilled room
 CheckIn.roomNotFilled=Following room is not full
 CheckIn.choosePrice=Please, enter price
+CheckIn.current=current
 Settings.fileError=Configuration file error
 Settings.numberError=Please enter a valid number
 Settings.feesLabel=Local fees
