Localization of Reorganisation added

--- a/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n.properties
+++ b/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n.properties
@@ -86,3 +86,7 @@ GuestTable.birthDate=Birthdate
 GuestTable.IDnumber=ID number
 GuestTable.name=Name
 GuestTable.roomNumber=Room number
+Reorganisation.windowTitle=Reorganisation of rooms
+Reorganisation.reservationLabel=Reservation
+Reorganisation.oldRoomLabel=Move from
+Reorganisation.newRoomLabel=to
