--- a/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n.properties
+++ b/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n.properties
@@ -10,6 +10,7 @@ NewReservation.fromLabel=From
 NewReservation.toLabel=To
 NewReservation.roomNumber=Room number
 NewReservation.nameEmptyError=Name cannot be empty
+NewReservation.nameFormatError =Name can consist only of alphabetical characters
 NewReservation.phoneEmptyError=Phone cannot be empty
 NewReservation.emailFormatError = Email format is not right
 NewReservation.phoneFormatError = Phone number format is not right
