Reorganisation dialog finished

--- a/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n.properties
+++ b/src/main/resources/cz/muni/fi/pv168/hotel/gui/forms/i18n.properties
@@ -50,6 +50,7 @@ CheckOut.guestsLabel=Guests
 CheckOut.nightsLabel=Nights spent
 CheckOut.feesLabel=Local fee per person per night
 CheckOut.totalLabel=Total
+CheckOut.roomNumberLabel=Room n.
 RoomInfo.windowTitle=Rooms
 RoomInfo.roomNumberColumn=Room
 RoomInfo.singleBedsColumn=Single beds
@@ -96,3 +97,5 @@ Reorganisation.windowTitle=Reorganisation of rooms
 Reorganisation.reservationLabel=Reservation
 Reorganisation.oldRoomLabel=Move from
 Reorganisation.newRoomLabel=to
+Reorganisation.okButton=Confirm
+Reorganisation.cancelButton=Cancel
