Linux GUI issues fixed

--- a/src/main/resources/cz/muni/fi/pv168/hotel/gui/i18n.properties
+++ b/src/main/resources/cz/muni/fi/pv168/hotel/gui/i18n.properties
@@ -1,5 +1,5 @@
 MainWindow.windowTitle=Hotel Reservation System
-MainWindow.roomLabel=Room n.
+MainWindow.roomLabel=Room 
 MainWindow.initError=Error initializing the application
 ButtonPanel.newReservationButton=New reservation
 ButtonPanel.cancelReservationButton=Cancel reservation
